<resources>
    <string name="app_name" translatable="false">DevCommunity</string>

    // Navigation menu strings

    <string name="nav_header_title" translatable="false">Dev Community</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_news">News</string>
    <string name="menu_articles">Articles</string>
    <string name="menu_events">Events</string>
    <string name="menu_calendar">Calendar</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_bookmarks">Bookmarks</string>

    <string name="menu_faqs">FAQS</string>
    <string name="menu_settings">Settings</string>

    // Log in strings

    <string name="login_title">Log in</string>
    <string name="login_button_A">ANONYMOUS USER</string>
    <string name="login_button_C">CONTINUE ANONYMOUSLY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="UPS">UPS.. couldn\'t Sign In</string>
    <string name="your_username">Your username and password don\'t match.\n Please, try again. </string>

    // Tutorial strings

    <string name="help_screen1">Be in touch</string>
    <string name="help_screen2">Networking</string>
    <string name="help_screen3">Learn</string>
    <string name="skip_tutorial">Skip tutorial</string>

    // Profile strings

    <string name="profile_title">User Profile</string>
    <string name="email_profile">sandra.adams@email.com</string>
    <string name="user_name">Sandra Adams</string>


    // FAQs strings

    <string name="FAQS_title">FAQS</string>

    // Event detail strings

    <string name="event_detail_title">Event Detail</string>
    <string name="web_page">Web Page:</string>
    // auxiliar (just to see in the layout edition)
    <string name="link">link:</string>

    // Events Fragment auxiliar Strings
    <string name="title">Title</string>
    <string name="description">Event Description</string>
    <string name="tags">Tags</string>




</resources>
