<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_articles" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/menu_calendar" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>
