<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_news">

    <fragment
        android:id="@+id/nav_news"
        android:name="cat.urv.deim.asm.p2.common.ui.news.newsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news">
    </fragment>

    <fragment
        android:id="@+id/nav_articles"
        android:name="cat.urv.deim.asm.p2.common.ui.articles.articlesFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_articles" />

    <fragment
        android:id="@+id/nav_events"
        android:name="cat.urv.deim.asm.p2.common.ui.events.eventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="cat.urv.deim.asm.p2.common.ui.calendar.calendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <activity
        android:id="@+id/nav_profile"
        android:name="cat.urv.deim.asm.p2.common.ProfileActivity"
        android:label="@string/menu_profile"
        tools:layout="@layout/activity_profile" />


</navigation>