<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLightGray">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dim_1"
        app:cardElevation="@dimen/dim_5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dim_2">

            <ImageView
                android:id="@id/imageView"
                android:layout_width="@dimen/dim_6"
                android:layout_height="@dimen/dim_7"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_launcher_round"
                android:scaleType="centerCrop">
            </ImageView>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/imageView"
                android:layout_marginRight="@dimen/dim_1"
                android:gravity="left"
                android:text="@string/title"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/title_size_2">
            </TextView>

            <TextView
                android:id="@+id/textViewShortDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewTitle"
                android:layout_toLeftOf="@id/imageView"
                android:layout_marginTop="@dimen/dim_1"
                android:layout_marginRight="@dimen/dim_1"
                android:lines="2"
                android:gravity="left"
                android:text="@string/description"
                android:textColor="@color/colorTextGray"
                android:textSize="@dimen/text_size"></TextView>

            <TextView
                android:id="@+id/textViewTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_toRightOf="@+id/bookmark_icon"
                android:layout_marginTop="@dimen/dim_3"
                android:gravity="right"
                android:text="@string/tags">
            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
